--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
   Start editing to see some magic happen :)
 </p>
 
-<ejs-grid [dataSource]='data'>
+<ejs-grid [dataSource]='data' [allowPaging]="true" [pageSettings]='pageSettings'>
                 <e-columns>
                     <e-column field='OrderID' headerText='Order ID' textAlign='Right' width=90></e-column>
                     <e-column field='CustomerID' headerText='Customer ID' width=120></e-column>
